plugins {
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
    id 'idea'
}

group = 'dev.anshumax'
version = '1.0'

repositories {
    mavenCentral()
    mavenLocal()
    flatDir {
        dirs 'libs'
    }
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven {
        url "https://nexus.geomatys.com/repository/geotoolkit/"
    }

    maven { url 'https://jitpack.io' }
}

sourceCompatibility = 17
targetCompatibility = 17

dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.0.4'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.26'


    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.1'
    
}
